adjusting sizing of projects and skills and correcting spacing issues

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
     box-sizing: border-box;
 }
 
+a {
+    transition: transform .2s ease-in-out;
+}
+
 /* unvisited link */
 a:link {
     color: hsl(166, 100%, 70%);
@@ -18,6 +22,10 @@ a:link {
 /* visited link */
 a:visited {
     color: hsl(166, 100%, 70%);
+}
+
+a:hover {
+    transform: scale(1.05);
 }
 
 /* mouse over link */
@@ -201,8 +209,8 @@ header {
 .skills-list {
     grid-row: 2/3;
     grid-column: 1/3;
-    display: flex;
-    justify-content: space-evenly;
+    /* display: flex;
+    justify-content: space-evenly; */
     white-space: normal;
     overflow-x: hide;
     padding: 5px;
@@ -426,7 +434,7 @@ h1 {
     grid-row: 2/3;
     grid-column: 1/6;
     display: grid;
-    grid-template-rows: 35% 65%;
+    grid-template-rows: 17% 83%;
     grid-template-columns: 15% 85%;
     width: 100%;
     overflow-x: hide;
@@ -439,11 +447,11 @@ h1 {
 
 .skills-list{
     grid-row: 2/3;
-    grid-column: 1/8;
-    display: flex;
+    grid-column: 1/6;
+    /* display: flex;
     justify-content: space-evenly;
-    overflow-x: scroll;
-    height: 75%;
+    overflow-x: scroll; */
+    height: 95%;
     transition: transform .2s ease-in-out;
 }
 
@@ -453,9 +461,9 @@ h1 {
 
 .projects {
     grid-row: 2/3;
-    grid-column: 3/11;
+    grid-column: 6/11;
     display: grid;
-    grid-template-rows: 35% 65%;
+    grid-template-rows: 15% 85%;
     grid-template-columns: 80% 20%;
     white-space: nowrap;
     width: 100%;
@@ -472,10 +480,11 @@ h1 {
     grid-row: 2/3;
     grid-column: 1/3;
     display: inline-block;
-    justify-self: center;
+    /* justify-self: center;
     overflow-x: scroll;
-    overflow-y: hide;
-    height: 75%;
+    overflow-y: hide; */
+    gap: 5ps;
+    height: 95%;
     width: 95%;
     padding-top: 16px;
     transition: transform .2s ease-in-out;
@@ -495,5 +504,4 @@ h1 {
 
 
 }
-
 
